@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>237</width>
+    <width>263</width>
     <height>197</height>
    </rect>
   </property>
@@ -84,10 +84,10 @@
       <item row="2" column="2">
        <widget class="QLabel" name="thresholdLabel">
         <property name="text">
-         <string>-100</string>
+         <string>-100 dB</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -132,10 +132,10 @@
          <string>Manual gain. Used when AGC is switched off</string>
         </property>
         <property name="text">
-         <string>0</string>
+         <string>0 dB</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -176,10 +176,10 @@
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>100</string>
+         <string>100 ms</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -221,10 +221,10 @@
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>2</string>
+         <string>2 dB</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
