@@ -3,6 +3,7 @@
        NEW: I/Q swapping option.
        NEW: Save and restore FFT settings.
      FIXED: Removed graphics redraw delay when changing frequency or demodulator.
+  IMPROVED: AGC settings moved to dialog window.
 
 
    2.1.148  Released on December 9, 2012
